--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = "^0.23.2"
 pydantic = "^2.1.1"
 img2table = { version = "^1.0.11", python = ">=3.11,<3.12" }
 python-dotenv = "^1.0.0"
+ghostscript = "^0.7"
 
 
 [build-system]
